Alignment bug fixed, Updated content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -353,7 +353,7 @@ h6 {
 # Sections General
 --------------------------------------------------------------*/
 section {
-  padding: 60px 0;
+  padding: 40px 0;
   overflow: hidden;
 }
 
@@ -488,7 +488,6 @@ section {
 .skills .progress .skill {
   padding: 10px 0;
   margin: 0;
-  text-transform: uppercase;
   display: block;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
@@ -1248,6 +1247,10 @@ section {
 
 .linkedin:hover {
   color: #0072b1 !important
+}
+
+.whatsapp {
+  margin: 0 !important;
 }
 
 .whatsapp:hover {
